--- a/01-Jenkins/Pipeline/jenkinsfile
+++ b/01-Jenkins/Pipeline/jenkinsfile
@@ -3,43 +3,16 @@ node
   stage('Git-Checkout') {
    git 'https://github.com/Hyndavi09/DevOpsPetclinic.git'
   }
-    
+     stage('Input for deploy in production server') {            
+   input('Do you want to deploy into production server proceed?')
+        }
  def project_path="01-Jenkins/Code/petclinic"
  
  dir(project_path) {
-    
-  stage('Maven-Clean') {
-   sh label: '', script: 'mvn clean'
-  }
-    
- stage('Maven-Compile') {
-   sh label: '', script: 'mvn compile'
-  }
- 
-   stage('Maven-Test') {
-   sh label: '', script: 'mvn test'
-  }
-  
-   stage('Maven-Package') {
-   sh label: '', script: 'mvn package'
-  }
-  
    stage('Archive-Artifacts') {
    archiveArtifacts 'target/*.war'
   }
-   stage('Sonar Analysis'){
-        withSonarQubeEnv('SonarQube'){
-         sh 'mvn sonar:sonar'
-        }
-        }
-  
-  
-  stage('Deploy Approval') {
-                input('Do you want to proceed?')           
-        }
- 
   stage('Geting Ready For Ansible') {
-  sh label: 'Docker', script: 'cp -rf target/*.war ../../../04-Terraform/03-Ansible-Deploy/ansible/04-Tomcat/templates/'
   sh label: 'Jenkins', script: "echo '<h1> TASK BUILD ID: ${env.BUILD_DISPLAY_NAME}</h1>' > ../../../04-Terraform/03-Ansible-Deploy/ansible/04-Tomcat/templates/apps/index.html"
 }  
    
