--- a/01-Jenkins/Pipeline/jenkinsfile
+++ b/01-Jenkins/Pipeline/jenkinsfile
@@ -19,8 +19,9 @@ node
     def downloadSpec = """{
     "files": [
     {
-      "pattern": "devops/*.war",
-      "target": "artifact/"
+      "pattern": "petclinic/*.war",
+      "target": "/home/mtadminnuvepro/artifacts/"
+      
       
     }
     ]
