--- a/01-Jenkins/Pipeline/jenkinsfile
+++ b/01-Jenkins/Pipeline/jenkinsfile
@@ -11,7 +11,7 @@ node
  dir(project_path) {
 	 
     stage('Jfrog Artifactory download'){
-    def server= Artifactory.server 'Artifactory'
+    def server= Artifactory.server 'artifact'
     def downloadSpec = """{
     "files": [
     {
