--- a/03-Ansible/03-Playbook/web-playbook.yaml
+++ b/03-Ansible/03-Playbook/web-playbook.yaml
@@ -1,16 +1,7 @@
 ---
 
-- hosts: 'web'
+- hosts: all
   become: yes
-  tasks:
-  - name: Install Apache2 Packages 
-    apt:  name=apache2 state=present
-
-  - name: Start Apache Service
-    service: name=apache2 state=started enabled=true
-
-- hosts: 'db'
-  become: yes
-  tasks:
-  - name: Install GIT Packages 
-    apt:  name=git state=present
+  become_method: sudo
+  roles:
+    - common
