--- a/03-Ansible/03-Playbook/roles/common/tasks/tomcat.yml
+++ b/03-Ansible/03-Playbook/roles/common/tasks/tomcat.yml
@@ -11,6 +11,6 @@
   command: rm -rf {{ ROOT_FO_PATH }}
 
 - name: Copy DevOps Project War Files
-  copy: src=/root/.jenkins/workspace/Capstone_Production/01-Jenkins/Pipeline/{{ warfile }} dest={{ tomcat_path }}/webapps/pet.war mode=0644
+  copy: src=/root/.jenkins/workspace/Capstone_Production/01-Jenkins/Pipeline/{{ warfile }} dest={{ tomcat_path }}/webapps/ROOT.war mode=0644
   notify: 
   - Restart Tomcat
